Bug 768310 - Don't throw from Event.initEvent if it's called during event dispatch; r=smaug